--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,11 @@
             <version>2.9.2</version>
         </dependency>
 
+        <!-- redis 依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
 
         <!-- 第三方API 接口调用客户端 -->
